# EK_UTILS

./: .gitignore  CMakeLists.txt  README.md  ek_conf_template.h
cmake/: gcc-arm-none-eabi.cmake
inc/: ek_assert.h  ek_conf.h  ek_conf_default.h  ek_conf_internal.h  ek_def.h  ek_err.h  ek_evoke.h  ek_export.h  ek_heap.h  ek_io.h  ek_list.h  ek_log.h  ek_mem.h  ek_picothread.h  ek_ringbuf.h  ek_stack.h  ek_str.h  ek_vec.h
src/: ek_assert.c  ek_evoke.c  ek_export.c  ek_heap.c  ek_io.c  ek_log.c  ek_mem.c  ek_picolibc_port.c  ek_picothread.c  ek_ringbuf.c  ek_stack.c  ek_str.c
